# submitment

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yaml
migrations/: 20210814235531_init-main-tables.down.sql  20210814235531_init-main-tables.up.sql
sql/: get_all_submissions.sql  get_submission_by_id.sql
src/: error.rs  main.rs  repository.rs  util.rs
src/graphql/: schema.rs
src/handler/: graphql.rs
src/schema/: auth.rs  mod.rs  submission.rs
src/service/: auth.rs  mod.rs  submission.rs
