[package]
name = "submitment"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.9"
juniper = "0.15"
sqlx = { version = "0.5", features = [ "runtime-actix-rustls", "postgres", "chrono", "macros", "migrate", "offline" ] }

chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

nanoid = "0.4"
jsonwebtoken = "7.2"
argon2 = "0.3"
rand_core = { version = "0.6", features = ["std"] }

thiserror = "1.0"
color-eyre = "0.5"
dotenv = "0.15"
